WebXR 'viewer' reference space not working correctly
Categories
(Core :: WebVR, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox78 | --- | fixed |
People
(Reporter: mortimergoro, Assigned: mortimergoro)
Details
Attachments
(1 file)
Reported here: https://github.com/MozillaReality/FirefoxReality/issues/3412
The 'viewer' XRReferenceSpace does not seem to be working correctly (i.e. as described in Spatial Tracking explainer). For example, the document states that
… calling getViewerPose() with a viewer reference space gives the appearance of having no tracking at all.
which is not the case in FR 10.1, as demonstrated by this fiddle (links in github)
The fiddle tries to get viewer pose relative to the viewer reference space, which should be zero. Therefore, you should NOT be able to look around in the scene; you should be seeing a static image.
It seems that when determining a pose in relation to the viewer reference space, the viewer's position is applied correctly (because the user is not able to walk through the scene in the fiddle even when using a 6DOF device), but its rotation is ignored (allowing the user to look around).
The viewer reference space behaves as expected on Oculus Browser 9.1.0 (Chromium 81), as well as Firefox Reality 9 using WebXR polyfill.
Assignee | ||
Updated•9 months ago
|
Assignee | ||
Comment 1•9 months ago
|
||
Pushed by igorostizaga@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/128c919becc6 Apply sensor orientation in XRNativeOriginViewer reference space r=kip,daoshengmu
Comment 3•9 months ago
|
||
bugherder |
Description
•