Bug 1641593 - Apply sensor orientation in XRNativeOriginViewer reference space r=kip,daoshengmu

Differential Revision: https://phabricator.services.mozilla.com/D77283